--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   font_awesome_flutter: ^10.2.1
   go_router: ^5.2.4
   google_fonts: ^4.0.4
+  dartz: ^0.10.1
+
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
