--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,14 @@ dependencies:
   dartz: ^0.10.1
   http: ^1.1.0
   shared_preferences: ^2.2.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.6
+
   flutter_test:
     sdk: flutter
 # For information on the generic Dart part of this file, see the
