--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  dio: ^5.3.2
+
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.2.1
@@ -39,6 +41,8 @@ dependencies:
   shared_preferences: ^2.2.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  flutter_bloc: ^8.1.3
+  bloc: ^8.1.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
