--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,11 +38,12 @@ dependencies:
   google_fonts: ^4.0.4
   dartz: ^0.10.1
   http: ^1.1.0
-  shared_preferences: ^2.2.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   flutter_bloc: ^8.1.3
   bloc: ^8.1.2
+  get_it: ^7.6.0
+
 
 dev_dependencies:
   flutter_lints: ^2.0.0
